--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="section-title"><h2>Education</h2><span class="muted">Degrees & milestones</span></div>
           <ul class="edu-list">
             <li class="edu-item"><strong>Ph.D. in Machine Learning</strong><br><span class="muted">Chaitanya (Deemed to be University), Hyderabad — Registered 2022; Thesis submitted on 28 Aug 2025</span></li>
-            <li class="edu-item"><strong>M.Tech in Software Engineering</strong><br><span class="muted">Ganapathi Engineering College, Warangal — 2012–2014 • 73.56% (Distinction)</span></li>
+            <li class="edu-item"><strong>M.Tech in Software Engineering</strong><br><span class="muted">Ganapathi Engineering College, Warangal —  73.56% (Distinction)</span></li>
             <li class="edu-item"><strong>B.Tech in Computer Science & Engineering</strong><br><span class="muted">Kakatiya Institute of Technology & Science, Kakatiya University — 61.44% (First Division)</span></li>
             <li class="edu-item"><strong>Diploma — Govt. Polytechnic, Warangal</strong><br><span class="muted">State Board of Technical Education and Training — 60.29% (First Division)</span></li>
             <li class="edu-item"><strong>School — St. Thomas Grammar High School, Warangal</strong><br><span class="muted">79.83% (Distinction)</span></li>
